// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionModal /> should display image 1`] = `
<img
  alt="automation features"
  class="image"
  src="foo.png"
/>
`;

exports[`<AutomationSubscriptionModal /> should display loader 1`] = `
<button
  class="wrapper fill primary medium isDisabled"
  disabled=""
  type="button"
>
  <svg
    class="spinner gloom spinner medium"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="100%"
  >
    <circle
      class="dot"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="circle"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  I am sure
</button>
`;

exports[`<AutomationSubscriptionModal /> should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<AutomationSubscriptionModal /> should render for customers already with full add-on features 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Manage Automation Add-on
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="cancel-automation-addon-modal-body"
            >
              <div
                class="description"
              >
                <div
                  class="flex"
                >
                  <div>
                    Your current subscription started on
                     
                    <b>
                      Aug 23
                    </b>
                    .
                    <br />
                    <br />
                    If you cancel now, you will lose access to self-service
                     
                    immediately.
                  </div>
                  <div
                    class="amountWrapper amount"
                  >
                    <span
                      class="amount"
                    >
                      <b>
                        $30
                      </b>
                       
                      / 
                      month
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer footerUnsubscribe modal-footer"
            >
              <button
                class="wrapper fill destructive medium"
                type="button"
              >
                Cancel subscription
              </button>
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                OK
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`<AutomationSubscriptionModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Subscribe to the Automation Add-on
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="manage-automation-addon-modal-body"
            >
              <div
                class="description"
              >
                <div
                  class="badge"
                >
                  <i
                    class="icon material-icons"
                  >
                    auto_awesome
                  </i>
                  <span>
                    Access these features and more with the Automation Add-on!
                  </span>
                </div>
                <div
                  class="flex"
                >
                  <div>
                    Add advanced automation features and automate up to 20% of all interactions.
                    <br />
                    <a
                      href="https://app.livestorm.co/gorgias-1/automaton-add-on-workshop?utm_source=candu&utm_medium=in_product&utm_campaign=homepage_addon"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Learn more.
                    </a>
                  </div>
                  <div
                    class="amountWrapper amount"
                  >
                    <span
                      class="amount"
                    >
                      <b>
                        $30
                      </b>
                       
                      / 
                      month
                    </span>
                  </div>
                </div>
                <div
                  class="features oldFeatures"
                >
                  <li
                    class="d-flex align-items-center oldFeatureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="material-icons"
                      >
                        low_priority
                      </i>
                    </span>
                    <span>
                      Track, Return, Cancel & Custom 
                      <b>
                        workflows
                      </b>
                    </span>
                  </li>
                  <li
                    class="d-flex align-items-center oldFeatureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="material-icons"
                      >
                        slow_motion_video
                      </i>
                    </span>
                    <span>
                      Self-service features in 
                      <b>
                        chat
                      </b>
                       and 
                      <b>
                        help center
                      </b>
                    </span>
                  </li>
                  <li
                    class="d-flex align-items-center oldFeatureListItem"
                  >
                    <span
                      class="featureIcon mr-3"
                    >
                      <i
                        class="material-icons"
                      >
                        insights
                      </i>
                    </span>
                    <span>
                      Self-service 
                      <b>
                        statistics
                      </b>
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                class="wrapper fill secondary medium"
                type="button"
              >
                Cancel
              </button>
              <div>
                <button
                  class="wrapper fill primary medium"
                  type="button"
                >
                  I am sure
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
